--- a/src/frontend/styles/index.css
+++ b/src/frontend/styles/index.css
@@ -14,10 +14,18 @@ body {
     height: 300px;
 }
 
-.title-area img {
+.banner {
+    display: flex;
+    height: 300px;
     width: 100%;
-    height: 100%;
-    padding: 0 350px;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner .fa-solid {
+    font-size: 54px;
+    margin: 0 15px;
+    color: white;
 }
 
 .overlay-content {
@@ -122,4 +130,28 @@ footer a{
 
 .footer .message {
     margin: 15px;
+}
+
+@media (max-width: 600px) {
+    .overlay-content h1 {
+        font-size: 24px;
+        margin-top: -25px;
+    }
+
+    .overlay-content ul {
+        display: none;
+    }
+    .link-area {
+        flex-direction: column;
+    }
+    .link-item {
+        margin: 20px 15px;
+    }
+    .link-item-content{
+        display: flex;
+    }
+    .link-item-content p {
+        margin-left: 55%;
+        font-size: 2em;
+    }
 }
