Centered name on mobile

--- a/src/frontend/styles/index.css
+++ b/src/frontend/styles/index.css
@@ -148,9 +148,9 @@ footer a{
 @media (max-width: 600px) {
     .overlay-content h1 {
         font-size: 24px;
-        margin-top: -25px;
+        margin: 0 auto;
+        font-size: 2.6em;
     }
-
     .overlay-content ul {
         display: none;
     }
