--- a/src/frontend/styles/index.css
+++ b/src/frontend/styles/index.css
@@ -25,13 +25,13 @@ body {
 .banner .fa-solid {
     font-size: 54px;
     margin: 0 15px;
-    color: white;
+    color: rgb(230, 228, 228);
 }
 
 .overlay-content {
     display: flex;
     justify-content: space-between;
-    color: white;
+    color: rgb(200, 200, 200);
     margin-top: -200px;
 }
 
@@ -96,6 +96,8 @@ body {
 
 .link-item .fa-item {
     font-size: 64px;
+    color: rgb(35, 34, 34);
+    text-shadow: 4px 4px 12px rgba(0,0,0,0.44);
 }
 
 .link-item a:hover{
