--- a/src/frontend/styles/index.css
+++ b/src/frontend/styles/index.css
@@ -109,6 +109,10 @@ body {
     transition: all 0.15s ease-in;
 }
 
+.link-item .fa-item:hover{
+    color: white;
+}
+
 .link-item p {
     text-align: center;
     margin-top: 15px;
