Increased description size on mobile

--- a/src/frontend/projects/style.css
+++ b/src/frontend/projects/style.css
@@ -136,6 +136,10 @@
         width: 100%;
     }
 
+    .card p {
+        font-size: 1rem;
+    }
+
     .card button {
         font-size: 20px;
         width: 200px;
