Update style.css to align project image heights

--- a/src/frontend/projects/style.css
+++ b/src/frontend/projects/style.css
@@ -60,6 +60,7 @@
     font-family: "Source Code Pro", monospace;
     font-size: 20px;
     margin-bottom: 5px;
+    height: 50px;
 }
 
 .card .img-container {
